k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-is-well-feb
  labels:
    app: all-is-well-feb
    environment: dev
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - all-is-well-feb-dev.agent.opsera.dev
      secretName: all-is-well-feb-dev-tls
  rules:
    - host: all-is-well-feb-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: all-is-well-feb
                port:
                  number: 80
